fixed issue with new issuetabs loading when creating a new issue fixed word wrapping on very long comments updated install script with new db changes

--- a/src/BugNET_WAP/App_Themes/Default/Default.css
+++ b/src/BugNET_WAP/App_Themes/Default/Default.css
@@ -1442,7 +1442,7 @@ ul.permissions li
 	z-index: 666;
 	zoom: 1;
 	overflow: hidden;
-	white-space: nowrap;
+	/*white-space: nowrap;*/
 }
 .scrollableDiv
 {
